# ETL_ecommerce

./: =1.15.0  Dockerfile  ETL_exercise_shuhan.sql  ETL_project.ipynb  MANUAL_SNOWFLAKE_SETUP.sql  Makefile  PROJECT_SUMMARY.md  README.md  SNOWFLAKE_SETUP_GUIDE.md  auto_complete_project.py  create_table.sql  data_generator.py  docker-compose.yml  etl_architecture.html  pipeline_example.py  pyproject.toml  requirements.txt  run_all_steps.sh  setup_complete.sh  setup_snowflake.sql  snowflake_upload.py  test_snowflake.py
data/: customers.csv  inventory_items.csv  orders.csv  products.csv
src/: consumer_to_snowflake.py  data_generator.py  database_setup.py  monitoring_app.py  pipeline_example.py  producer.py  producer_example.py  simple_consumer.py  simple_producer.py  snowflake_automation.sql  snowflake_upload.py
